VACommand and VAScope added

--- a/VirtualApps/VirtualApps.csproj
+++ b/VirtualApps/VirtualApps.csproj
@@ -74,6 +74,12 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\VirtualAppEngine\VirtualAppEngine.csproj">
+      <Project>{a95f5b4e-21e3-4259-9c9a-c13a471a6d6f}</Project>
+      <Name>VirtualAppEngine</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
