--- a/VirtualAppEngine/VirtualAppEngine.csproj
+++ b/VirtualAppEngine/VirtualAppEngine.csproj
@@ -39,8 +39,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="VACommand.cs" />
     <Compile Include="VAEngine.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="VAScope.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
